# pybridge

./: CMakeLists.txt
app/: build.gradle
app/src/main/assets/python/: bootstrap.py
app/src/main/java/com/jventura/pyapp/: MainActivity.java
app/src/main/jni/: pybridge.c
